ja/reference/1.0.2/commands/table-create/index.md
---
title: table_create
layout: ja
---

{% comment %}
##############################################
  THIS FILE IS AUTOMATICALLY GENERATED FROM
  "_po/ja/reference/1.0.2/commands/table-create/index.po"
  DO NOT EDIT THIS FILE MANUALLY!
##############################################
{% endcomment %}


* TOC
{:toc}

## 概要 {#abstract}

`table_create` は、新しいテーブルを作成します。

このコマンドは[Groonga の `table_create` コマンド](http://groonga.org/ja/docs/reference/commands/table_create.html)と互換性があります。

形式
: Request-Response型。コマンドに対しては必ず対応するレスポンスが返されます。

リクエストの `type`
: `table_create`

リクエストの `body`
: パラメータのハッシュ。

レスポンスの `type`
: `table_create.result`

## パラメータの構文 {#syntax}

    {
      "name"              : "<テーブル名>",
      "flags"             : "<テーブルの属性>",
      "key_type"          : "<主キーの型>",
      "value_type"        : "<値の型>",
      "default_tokenizer" : "<既定のトークナイザー>",
      "normalizer"        : "<ノーマライザー>"
    }

## パラメータの詳細 {#parameters}

`name` 以外のパラメータはすべて省略可能です。

すべてのパラメータは[Groonga の `table_create` コマンドの引数](http://groonga.org/ja/docs/reference/commands/table_create.html#parameters)と共通です。詳細はGroongaのコマンドリファレンスを参照して下さい。

## レスポンス {#response}

このコマンドは、レスポンスの `body` としてコマンドの実行結果に関する情報を格納した配列を返却します。

    [
      [
        <Groongaのステータスコード>,
        <開始時刻>,
        <処理に要した時間>
      ],
      <テーブルが作成されたかどうか>
    ]

このコマンドはレスポンスの `statusCode` として常に `200` を返します。これは、Groonga互換コマンドのエラー情報はGroongaのそれと同じ形で処理される必要があるためです。

レスポンスの `body` の詳細：

ステータスコード
: コマンドが正常に受け付けられたかどうかを示す整数値です。以下のいずれかの値をとります。
  
   * `0` (`Droonga::GroongaHandler::Status::SUCCESS`) : 正常に処理された。.
   * `-22` (`Droonga::GroongaHandler::Status::INVALID_ARGUMENT`) : 引数が不正である。

開始時刻
: 処理を開始した時刻を示す数値（UNIX秒）。

処理に要した時間
: 処理を開始してから完了までの間にかかった時間を示す数値。

テーブルが作成されたかどうか
: テーブルが作成されたかどうかを示す真偽値です。以下のいずれかの値をとります。
  
   * `true`：テーブルを作成した。
   * `false`：テーブルを作成しなかった。
